JPMS 検討: jche だけモジュール化し JDT を classpath に残す案の検証結果を追記
--add-reads jche=ALL-UNNAMED を付ければ javac / java 直叩きでは動くこと、
そのために必要な変更（入口のパッケージ化、requires java.xml、拡張コンパイルの
クラスパス）を回帰テストで確認した。一方 JBang の --module は //DEPS を必ず
module-path に置くため本流では成立せず、採らない結論とした。

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017JRw42tsRMuNW7JPKGXKfz